<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>live.nerotv</groupId>
    <artifactId>ZyneonApplication</artifactId>
    <version>1.0.0-BETA-G19</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>17</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>17</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.danieldieeins</groupId>
            <artifactId>OpenLauncherAPI</artifactId>
            <version>4.1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.friwi</groupId>
            <artifactId>jcefmaven</artifactId>
            <version>110.0.25</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>live.nerotv.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>live.nerotv.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>html/old/assets/web/assets/mobirise-icons2/*.eot</exclude>
                    <exclude>html/old/assets/web/assets/mobirise-icons2/*.ttf</exclude>
                    <exclude>html/old/assets/web/assets/mobirise-icons2/*.woff</exclude>
                    <exclude>html/old/assets/socicon/fonts/*.eot</exclude>
                    <exclude>html/old/assets/socicon/fonts/*.woff</exclude>
                    <exclude>html/old/assets/socicon/fonts/*.woff2</exclude>
                    <exclude>html/old/assets/socicon/fonts/*.ttf</exclude>

                    <exclude>html/access/assets/web/assets/mobirise-icons2/*.eot</exclude>
                    <exclude>html/access/assets/web/assets/mobirise-icons2/*.ttf</exclude>
                    <exclude>html/access/assets/web/assets/mobirise-icons2/*.woff</exclude>
                    <exclude>html/access/assets/socicon/fonts/*.eot</exclude>
                    <exclude>html/access/assets/socicon/fonts/*.woff</exclude>
                    <exclude>html/access/assets/socicon/fonts/*.woff2</exclude>
                    <exclude>html/access/assets/socicon/fonts/*.ttf</exclude>

                    <exclude>html/admin/assets/web/assets/mobirise-icons2/*.eot</exclude>
                    <exclude>html/admin/assets/web/assets/mobirise-icons2/*.ttf</exclude>
                    <exclude>html/admin/assets/web/assets/mobirise-icons2/*.woff</exclude>
                    <exclude>html/admin/assets/socicon/fonts/*.eot</exclude>
                    <exclude>html/admin/assets/socicon/fonts/*.woff</exclude>
                    <exclude>html/admin/assets/socicon/fonts/*.woff2</exclude>
                    <exclude>html/admin/assets/socicon/fonts/*.ttf</exclude>

                    <exclude>html/assets/web/assets/mobirise-icons2/*.eot</exclude>
                    <exclude>html/assets/web/assets/mobirise-icons2/*.ttf</exclude>
                    <exclude>html/assets/web/assets/mobirise-icons2/*.woff</exclude>
                    <exclude>html/assets/socicon/fonts/*.eot</exclude>
                    <exclude>html/assets/socicon/fonts/*.woff</exclude>
                    <exclude>html/assets/socicon/fonts/*.woff2</exclude>
                    <exclude>html/assets/socicon/fonts/*.ttf</exclude>
                </excludes>
            </resource>
        </resources>
    </build>
</project>
